fix bug alerts on ios and styles

--- a/src/pages/artworks/klein/alert.scss
+++ b/src/pages/artworks/klein/alert.scss
@@ -1,8 +1,9 @@
-.goHome {
+.swiper-slide img.goHome {
   position: absolute;
+  z-index: 20;
   right: 15px;
   top: 40px;
-  z-index: 2;
+  width: 30px;
 }
 
 .customAlert {
