--- a/src/pages/artworks/klein/secondScreenKlein.scss
+++ b/src/pages/artworks/klein/secondScreenKlein.scss
@@ -12,7 +12,7 @@ signature-pad {
   position: absolute;
   background: #FFF;
   width: 100%;
-  height: 170px;
+  height: 120px;
   bottom: 0;
 }
 
