--- a/src/pages/artworks/newman/canvas.scss
+++ b/src/pages/artworks/newman/canvas.scss
@@ -7,6 +7,7 @@ canvas {
 signature-pad.newman {
   left: 0;
   margin-top: 80px;
+  width: 100%;
 }
 
 .thirdScreenNewman__bottom {
