--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,7 +1,12 @@
 ion-slides {
-  height: 100vh;
+  height: 97vh;
 }
 
+.home__artworkButton--notClickable {
+  background-color: #FFFFFF;
+  opacity: 0.3;
+  color: #009358;
+}
 
 .landingScreen__title {
   width: 231px;
